--- a/package.json
+++ b/package.json
@@ -1,32 +1,54 @@
 {
-  "name": "pj-setup-for-tutorial",
+  "name": "style-architecture",
   "version": "1.0.0",
   "main": "webpack.config.js",
-  "repository": "git@personal_2:apollotang/setup-pj-for-tutorial.git",
+  "description": "A style-architecture",
   "author": "Apollo Tang <tang.apollo@gmail.com>",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ApolloTang/pj-setup-style-architecture"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.5.2",
+    "babel-plugin-transform-bluebird": "^0.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "progress-bar-webpack-plugin": "^1.9.3",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
+    "webpack-config-utils": "^2.3.0",
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "express": "^4.15.3",
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --env.dev --no-info"
+    "//": "...............  build for distribution  ..............",
+    "dev": "webpack-dev-server --env.dev --no-info",
+    "dev:debug": "webpack-dev-server --env.dev --env.debug --no-info",
+    "start": "node server.js",
+    "build": "webpack --env.prod -p --define process.env.prod='true'",
+    "prebuild": "rimraf dist",
+    "clean": "rimraf dist",
+    "debug": "node-nightly --inspect-brk node_modules/.bin/webpack --env.debug"
   }
 }
