heroku won't build, relocate devDep to dep and try

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "url": "https://github.com/ApolloTang/pj-setup-style-architecture"
   },
   "devDependencies": {
+  },
+  "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-bluebird": "^0.1.1",
@@ -30,9 +32,7 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-config-utils": "^2.3.0",
-    "webpack-dev-server": "^2.5.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^2.5.0",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
